tests/errors/existential/body.expect
---CODE---
1
---STDERR---
error: component's body does not satisfy constraint on existentially-quantified parameter
  ┌─ tests/errors/existential/body.fil:2:12
  │
2 │     exists L where L > W;
  │            ^ cannot prove constraint on existentially quantified parameter

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
